--- a/dramaj_websiteportfolio/erschaffung_1.html
+++ b/dramaj_websiteportfolio/erschaffung_1.html
@@ -13,6 +13,16 @@
         .spaced {
             padding: 50px;
         }
+
+        .container {
+            display: flex;
+            align-items: center;
+            gap: 5px
+        }
+
+        .hidden {
+            opacity: 0;
+        }
     </style>
 </head>
 <body>
@@ -22,8 +32,11 @@
 <p id="para4">viele</p>
 <p id="para5">namen:</p>
 <p id="para6" class="spaced">widerliche masse, machenschaft, geschöpf, kreatur, deformierte gestalt, bestie, biest, bösewicht, dämon, satan, teufel, wesen, herr, tier, schurke, feind, gegner, wurm, wrack, urheber von unheil, mörder deines friedens</p>
-<p id="para7">du bist. warst. wirst sein.</p>
-
+<div class="container">
+    <p id="para7">du bist. warst. wirst sein.</p>
+    <a id="listlink" href="list.html">7258</a>
+</div>
+<br>
 <a id="awakeninglink" href="awakening.html">awake</a>
 
 <script>
@@ -35,7 +48,8 @@
             { id: "para4", delay: 4000 },
             { id: "para5", delay: 5000 },
             { id: "para6", delay: 6000 },
-            { id: "para7", delay: 10000 }, // 10 seconds after para6
+            { id: "para7", delay: 10000 },
+            { id: "listlink", delay: 10000 },
             { id: "awakeninglink", delay: 11000 }
         ];
 
