--- a/dramaj_websiteportfolio/erschaffung_2.html
+++ b/dramaj_websiteportfolio/erschaffung_2.html
@@ -27,8 +27,8 @@
 <p id="para5">namen:</p>
 <p id="para6" class="spaced">widerliche masse, machenschaft, geschöpf, kreatur, deformierte gestalt, bestie, biest, bösewicht, dämon, satan, teufel, wesen, herr, tier, schurke, feind, gegner, wurm, wrack, urheber von unheil, mörder deines friedens</p>
 <p id="para7">ich bin. war. werde sein.</p>
-<p id="para8">the other monster is already tired of sharing.</p>
-<p id="para9">are you now ready to hear your own tale?</p>
+<p id="para8">the monster's tale is actually your tale.</p>
+<p id="para9">are you now ready to listen to it?</p>
 
 
 <a id="awakeninglink" href="erschaffung_1.html">yes</a>
