--- a/dramaj_websiteportfolio/list.html
+++ b/dramaj_websiteportfolio/list.html
@@ -108,7 +108,7 @@
 
   <table>
     <tr>
-      <td class="clickable_nr" onclick="toggleText('additionalText1')">1</td>
+      <td class="clickable_nr" onclick="toggleText('additionalText1')"><a href="erschaffung_1.html">7258</a></td>
       <td class="clickable_title" onclick="toggleText('additionalText1')">Excerpt of the theatrepiece «Frankenstein Lost»</td>
       <td class="clickable_author" onclick="toggleText('additionalText1')">dramaj</td>
     </tr>
