--- a/dramaj_websiteportfolio/susanstryker.html
+++ b/dramaj_websiteportfolio/susanstryker.html
@@ -44,8 +44,8 @@
     <div id="loss"></div>
     
     <div class="link-container" id="links">
-        <a href="path1.html" id="link1">play again</a>
-        <a href="path2.html" id="link2">return to menu</a>
+        <a href="tale.html" id="link1">play again</a>
+        <a href="menu.html" id="link2">return to menu</a>
     </div>
 
     <script>
