--- a/dramaj_websiteportfolio/tale.html
+++ b/dramaj_websiteportfolio/tale.html
@@ -14,11 +14,11 @@
 <body>
     <p id="para1">Do you remember the first moments of your existence?</p>
     <p id="para2">No?</p>
-    <p id="para3">Listen to your tale; if you have heard that, abandon or commiserate yourself, as you shall judge that you deserve. But hear yourself.</p>
-
+    <p id="para3">Listen to your tale; after you have heard it, abandon or feel pity for yourself, <br>as you shall judge what you deserve. But first, hear yourself.</p>
+<br><br>
     <div class="talelinks">
-    <a id="link1" href="erschaffung_1.html">hear your tale</a>
-    <a id="link2" href="erschaffung_2.html">hear another monster's tale</a>
+    <a id="link1" href="erschaffung_1.html">listen to your tale</a>
+    <a id="link2" href="erschaffung_2.html">listen to a monster's tale</a>
     <a id="link3" href="gotthard.html">sit upon a rock that overlooks a sea of ice</a>
     </div>
 
