--- a/dramaj_websiteportfolio/winner.html
+++ b/dramaj_websiteportfolio/winner.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="background"></div>
-    <audio id="background-audio" autoplay loop>
+    <audio id="background-audio" autoplay>
         <source src="yeinousound_website.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
