--- a/dramaj_websiteportfolio/about.html
+++ b/dramaj_websiteportfolio/about.html
@@ -2,10 +2,97 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>about</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background-color: rgb(197, 206, 173);
+        }
+
+        h2 {
+            font-family: Arial, Helvetica, sans-serif;
+            color: rgb(3, 0, 109);
+            margin-left: 400px;
+        }
+
+        p {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 1.5em;
+            color: rgb(3, 0, 109);
+            margin-left: 400px;
+            margin-right: 400px;
+            text-align: justify; /* Justify text */
+
+        }
+
+        #yellow {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 1em;
+            color: rgb(204, 255, 0);
+        }
+
+        #quote {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 1.5em;
+            color: rgb(204, 255, 0);
+            text-align: end;
+        }
+
+        .flex-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-left: 400px;
+            margin-right: 400px;
+        }
+
+        .flex-container p {
+            margin: 0;
+        }
+
+        .flex-container a {
+            margin-left: 10px;
+        }
+
+        .buttons {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+            margin-top: 30px;
+        }
+
+        .buttons button {
+            margin: 0 10px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="buttons">
+        <button type="button">
+            <a href="list.html">INDEX</a>
+        </button>
+        <button type="button" id="alert">
+            <a href="tale.html">GAME</a>
+        </button>
+        <button type="button">
+            <a href="about.html">ABOUT</a>
+        </button>
+    </div>
+
+    <h2>About</h1>
+
+    <p><span id="yellow">dramaj</span> is a theatre*performance*production collective founded in 2024 and is currently based between Vienna (AT) and Zurich (CH).</p>
+    <p>This <span id="yellow">website*portfolio</span> is an impossible attempt of an archival collection of the misty unconditional core we constitute and are constituted around.</p>
+    <p id="quote">«Such mist can be described as the dreamy, foggy, steamy matter, or to put it differently, an uncontrollable and wet foam of imagination».</p>
+    <p>This uncontrollable wet foam permeates every corner, between and around us, its intangibility is terrifying. Many people and institutions ignore their irrational, foggy core, clinging to stories they can control — tales of fixed places, linear progression, and rigid protocols. This colonial nonsense of a past still haunts our present.</p>
+    <p>How*Is it possible not to reject but to acknowledge and take care of this foggy, imaginative, dreamy core, that </p>
+        <p id="quote">«is composed of a multitude of fragments, rather than of smooth epistemological wholes. Some fragments will be collected here and bound temporarily together to form a loosely integrated net – or, better, an unassimilated hybrid, a monstrous body».</p>
+    <p>This monstrous misty core body consists of unanswered questions, late-night conversations, disagreements, unfinished stories, the killed darlings, theory and headaches, warm hugs, WhatsApp-messages, cold after-work-beeeeeers, schedules and imaginary budgets that might at some point trespass the borders of fictionality and manifest in real <span id="yellow">$$$</span>.</p>
+    <p>Through sitting with the im*possibility of acknowledging and taking care of the misty unconditional core that immediately slips your grip as you try to grasp it, we learned that</p>
+        <p id="quote">«research does not have to be complete, finished, exhaustive (and exhausting),[our attention was drawn] to the search in research, so this work is at its heart, searching, open ended and generative».</p>
+    <p>We don’t think it will ever be finished.</p>
+    <p>And no, we don’t know what we are doing.</p>
 </body>
 </html>
