--- a/dramaj_websiteportfolio/abscheu.html
+++ b/dramaj_websiteportfolio/abscheu.html
@@ -22,7 +22,7 @@
             padding: 10px;
         }
 
-        p, .audio, .extra-links a, .link-container a {
+        p, .audio, .extra-links a, .link-container a, #newlink {
             opacity: 0;
             pointer-events: none;
             margin: 0;
@@ -30,6 +30,17 @@
 
         p {
             margin-bottom: 40px; /* Space between paragraphs and other elements */
+        }
+
+        #listlink {
+            margin-left: 10px; /* Space between the paragraph and the link */
+            display: inline;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 0.7em;
+            color: rgb(204, 255, 0);
+            border: 1px solid rgb(204, 255, 0);
+            border-radius: 20px;
+            padding: 2px;
         }
 
         .audio {
@@ -75,16 +86,23 @@
             "Kaum hast du den Fuß über die Schwelle gesetzt, da kreischten die Kinder auf. 
             Das ganze Dorf geriet in Aufruhr. Manche flüchteten, manche griffen dich an, 
             bis du, von Steinen und vielen anderen Wurfgeschossen zerschunden, 
-            ins offene Land entkamst und dich angsterfüllt in einen niedrigen Schuppen flüchtetest.” (Shelley, 1987, p. 135)
+            ins offene Land entkamst und dich angsterfüllt in einen niedrigen Schuppen flüchtetest.”
+            <a href="list.html" id="listlink">001-2</a>
         </p>
+        <div class="audio" id="first-audio">
+            <audio controls>
+                <source src="moubi_kurz.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
         <p id="second-paragraph">What do you do now?</p>
         <div class="link-container">
-            <a href="#" id="first-link">Read a book.</a>
-            <a href="#" id="second-link">Observe human affection.</a>
+            <a href="#" id="first-link">Read a book</a>
+            <a href="#" id="second-link">Observe human affection</a>
         </div>
         <div class="audio" id="audio">
             <audio controls>
-                <source src="body.html.video.mp3" type="audio/mpeg">
+                <source src="moubi_lang.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </div>
@@ -97,6 +115,8 @@
 
     <script>
         const firstParagraph = document.getElementById('first-paragraph');
+        const newLink = document.getElementById('newlink');
+        const firstAudio = document.getElementById('first-audio');
         const audio = document.getElementById('audio');
         const secondParagraph = document.getElementById('second-paragraph');
         const linkContainer = document.querySelector('.link-container');
@@ -115,15 +135,19 @@
             }, delay);
         }
 
-        // Set timeout for the first paragraph
+        // Set timeout for the first paragraph and new link
         showElement(firstParagraph, 1000);
+        showElement(newLink, 1000);
+
+        // Set timeout for the first audio
+        showElement(firstAudio, 11000);
 
         // Set timeout for the second paragraph
-        showElement(secondParagraph, 12000);
+        showElement(secondParagraph, 21000);
 
         // Set timeout for the first and second links
-        showElement(firstLink, 13000);
-        showElement(secondLink, 14000);
+        showElement(firstLink, 22000);
+        showElement(secondLink, 23000);
 
         // Function to show audio and schedule extra links to appear
         function showAudioAndLinks() {
@@ -142,9 +166,9 @@
         });
 
         // Set timeouts for the extra links to appear 30, 31, and 32 seconds after page load
-        showElement(thirdLink, 30000);
-        showElement(fourthLink, 31000);
-        showElement(fifthLink, 32000);
+        showElement(thirdLink, 40000);
+        showElement(fourthLink, 41000);
+        showElement(fifthLink, 42000);
     </script>
 </body>
 </html>
