--- a/dramaj_websiteportfolio/anger.html
+++ b/dramaj_websiteportfolio/anger.html
@@ -34,6 +34,11 @@
             width: 100%;
         }
 
+        #listlink {
+            opacity: 0;
+            margin: 20px 0;
+        }
+
         .audio {
             margin: 40px 0; /* Space above and below the audio element */
             display: flex;
@@ -62,10 +67,11 @@
 </head>
 <body>
     <p class="left-bound" id="first-paragraph">“Anger and rage are expressions of the same experience of being hurt, and the tension from needing to care for ourselves while also trying to figure out how to be safe.”</p>
+    <a href="list.html" id="listlink">009</a>
     <p class="right-bound" id="second-paragraph">“Where are you hurting? Where is the aching? Where is your woundedness? What is your anger trying to protect?”</p>
     <div class="audio" id="audio-element">
         <audio controls>
-            <source src="audio.mp3" type="audio/mpeg">
+            <source src="yeinou_kurz.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
     </div>
@@ -83,6 +89,7 @@
 
         window.onload = function() {
             showElement('first-paragraph', 1000);
+            showElement('listlink', 2500);
             showElement('second-paragraph', 4000);
             showElement('audio-element', 10000);
             showElement('first-link', 20000);
