--- a/dramaj_websiteportfolio/about_david.html
+++ b/dramaj_websiteportfolio/about_david.html
@@ -25,12 +25,24 @@
             margin-right: 400px;
         }
 
+        .content-container , .work-container{
+            display: flex;
+            align-items: flex-start;
+            margin-left: 400px;
+            margin-right: 400px;
+        }
+
+        .content-container img {
+            max-width: 200px; /* Adjust the size as needed */
+            height: auto; /* Maintain aspect ratio */
+            margin-left: 30px;
+            margin-top: 30px;
+        }
+
         p {
             font-family: Arial, Helvetica, sans-serif;
             font-size: 1.5em;
             color: rgb(3, 0, 109);
-            margin-left: 400px;
-            margin-right: 400px;
             text-align: justify; /* Justify text */
         }
 
@@ -93,21 +105,25 @@
     </div>
 
     <div class="h2-container">
-        <h2 id="siteyouareon">About</h2>
-        <a href="about_david.html"><h2>David</h2></a>
+        <a href="about.html"><h2>About</h2></a>
+        <h2 id="siteyouareon">David</h2>
         <a href="about_joelle.html"><h2>Joëlle</h2></a>
     </div>
     
-    <p><span id="yellow">dramaj</span> is a theatre*performance*production collective founded in 2024 and is currently based between Vienna (AT) and Zurich (CH).</p>
-    <p>This <span id="yellow">website*portfolio</span> is an impossible attempt of an archival collection of the misty unconditional core we constitute and are constituted around.</p>
-    <p id="quote">«Such mist can be described as the dreamy, foggy, steamy matter, or to put it differently, an uncontrollable and wet foam of imagination».</p>
-    <p>This uncontrollable wet foam permeates every corner, between and around us, its intangibility is terrifying. Many people and institutions ignore their irrational, foggy core, clinging to stories they can control — tales of fixed places, linear progression, and rigid protocols. This colonial nonsense of a past still haunts our present.</p>
-    <p>How*Is it possible not to reject but to acknowledge and take care of this foggy, imaginative, dreamy core, that </p>
-    <p id="quote">«is composed of a multitude of fragments, rather than of smooth epistemological wholes. Some fragments will be collected here and bound temporarily together to form a loosely integrated net – or, better, an unassimilated hybrid, a monstrous body».</p>
-    <p>This monstrous misty core body consists of unanswered questions, late-night conversations, disagreements, unfinished stories, the killed darlings, theory and headaches, warm hugs, WhatsApp-messages, cold after-work-beeeeeers, schedules and imaginary budgets that might at some point trespass the borders of fictionality and manifest in real <span id="yellow">$$$</span>.</p>
-    <p>Through sitting with the im*possibility of acknowledging and taking care of the misty unconditional core that immediately slips your grip as you try to grasp it, we learned that</p>
-    <p id="quote">«research does not have to be complete, finished, exhaustive (and exhausting),[our attention was drawn] to the search in research, so this work is at its heart, searching, open ended and generative».</p>
-    <p>We don’t think it will ever be finished.</p>
-    <p>And no, we don’t know what we are doing.</p>
+    <div class="content-container">
+        <div>
+            <p>David Gees <span id="yellow">(they/he)</span> is a director*writer*researcher and performer*artist working at the intersection of theater, performance and theory. After working as an intern at Schauspielhaus Zürich during the 2020/21 season, they moved to Vienna to study Cross-Disciplinary Strategies at the University of Applied Arts Vienna. Meanwhile they started to work as a director's assistant at Theater Nestroyhof Hamakom and Schauspielhaus Wien.</p>
+            <p>In the course of their studies a collaboration with Joëlle Antonie Gbeassor emerged, with whom he produced and co-directed «Daddy's favourite: Monsta Energy: a fairytale» (2023) and «Frankenstein Lost» (2023/24). In 2024, they founded the theatre*performance*production collective <span id="yellow">dramaj</span> together.</p>
+        </div>
+        <img src="David Johannes Gees.jpeg" alt="David's Picture">
+
+    </div>
+
+    <div class="work-container">
+
+    </div>
+
+    
+
 </body>
 </html>
