--- a/dramaj_websiteportfolio/about_joelle.html
+++ b/dramaj_websiteportfolio/about_joelle.html
@@ -93,9 +93,9 @@
     </div>
 
     <div class="h2-container">
-        <h2 id="siteyouareon">About</h2>
+        <a href="about.html"><h2>About</h2></a>
         <a href="about_david.html"><h2>David</h2></a>
-        <a href="about_joelle.html"><h2>Joëlle</h2></a>
+        <h2 id="siteyouareon">Joëlle</h2>
     </div>
     
     <p><span id="yellow">dramaj</span> is a theatre*performance*production collective founded in 2024 and is currently based between Vienna (AT) and Zurich (CH).</p>
