--- a/dramaj_websiteportfolio/list.html
+++ b/dramaj_websiteportfolio/list.html
@@ -41,7 +41,10 @@
           border-width: 2px;
           border-radius: 20px;
           margin: 2px;
-          padding: 3px;
+          padding-top: 5px;
+          padding-bottom: 5px;
+          padding-left: 10px;
+          padding-right: 10px;
         }
         
         /* Style Table*/
@@ -60,6 +63,10 @@
           color: #CCFF00;
           text-align: center;
           font-size: 1em;
+        }
+
+        tr:hover + tr.additional-text {
+          display: table-row;
         }
       
     </style>
