--- a/dramaj_websiteportfolio/index.html
+++ b/dramaj_websiteportfolio/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dramaj</title>
     <link rel="stylesheet" href="style.css">
+
+    <style>
+        h1 {
+            border: 4px solid ;
+            border-radius: 50%;
+            border-color: #CCFF00;
+            border-top: 3px;
+        }
+    </style>
 </head>
 
 <body>
