--- a/dramaj_websiteportfolio/about_joelle.html
+++ b/dramaj_websiteportfolio/about_joelle.html
@@ -93,7 +93,7 @@
     </div>
 
     <div class="h2-container">
-        <a href="about.html"><h2>About</h2></a>
+        <a href="about.html"><h2>dramaj</h2></a>
         <a href="about_david.html"><h2>David</h2></a>
         <h2 id="siteyouareon">Joëlle</h2>
     </div>
