--- a/dramaj_websiteportfolio/about.html
+++ b/dramaj_websiteportfolio/about.html
@@ -21,16 +21,14 @@
         .h2-container {
             display: flex;
             justify-content: space-between;
-            margin-left: 400px;
-            margin-right: 400px;
+            margin: 0 400px;
         }
 
         p {
             font-family: Arial, Helvetica, sans-serif;
             font-size: 1.5em;
             color: rgb(3, 0, 109);
-            margin-left: 400px;
-            margin-right: 400px;
+            margin: 20px 400px; /* Added margin for spacing between paragraphs */
             text-align: justify; /* Justify text */
         }
 
@@ -45,14 +43,14 @@
             font-size: 1.5em;
             color: rgb(204, 255, 0);
             text-align: end;
+            margin: 20px 400px; /* Added margin for spacing between paragraphs */
         }
 
         .flex-container {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-left: 400px;
-            margin-right: 400px;
+            margin: 0 400px;
         }
 
         .flex-container p {
@@ -66,16 +64,81 @@
         .buttons {
             display: flex;
             justify-content: center;
-            margin-bottom: 20px;
-            margin-top: 30px;
+            margin: 30px 0 20px 0;
         }
 
         .buttons button {
             margin: 0 10px;
         }
 
+        .buttons a {
+            text-decoration: none;
+            color: inherit;
+        }
+
         #siteyouareon {
-            color:rgb(204, 255, 0)
+            color: rgb(204, 255, 0);
+        }
+
+        @media (max-width: 768px) {
+            .h2-container, .flex-container {
+                margin: 0 20px;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+
+            p {
+                margin: 20px 20px; /* Added margin for spacing between paragraphs */
+                font-size: 1.2em;
+                text-align: justify; /* Justify text for mobile */
+            }
+
+            #yellow {
+                font-size: 1em; /* Ensure yellow blocks are consistent */
+            }
+
+            #quote {
+                margin: 20px 20px; /* Added margin for spacing between paragraphs */
+                font-size: 1.2em;
+                text-align: justify; /* Justify text for mobile */
+            }
+
+            .buttons {
+                flex-direction: row;
+                flex-wrap: wrap;
+            }
+
+            .buttons button {
+                margin: 10px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            p {
+                margin: 20px 20px; /* Added margin for spacing between paragraphs */
+                font-size: 1em;
+                text-align: justify; /* Justify text for mobile */
+            }
+
+            #yellow {
+                font-size: 1em; /* Ensure yellow blocks are consistent */
+            }
+
+            #quote {
+                margin: 20px 20px; /* Added margin for spacing between paragraphs */
+                font-size: 1em;
+                text-align: justify; /* Justify text for mobile */
+            }
+
+            .buttons {
+                flex-direction: row;
+                flex-wrap: wrap;
+            }
+
+            .buttons button {
+                margin: 10px;
+            }
         }
     </style>
 </head>
@@ -93,7 +156,7 @@
     </div>
 
     <div class="h2-container">
-        <h2 id="siteyouareon">About</h2>
+        <h2 id="siteyouareon">dramaj</h2>
         <a href="about_david.html"><h2>David</h2></a>
         <a href="about_joelle.html"><h2>Joëlle</h2></a>
     </div>
@@ -102,7 +165,7 @@
     <p>This <span id="yellow">website*portfolio</span> is an impossible attempt of an archival collection of the misty unconditional core we constitute and are constituted around.</p>
     <p id="quote">«Such mist can be described as the dreamy, foggy, steamy matter, or to put it differently, an uncontrollable and wet foam of imagination».</p>
     <p>This uncontrollable wet foam permeates every corner, between and around us, its intangibility is terrifying. Many people and institutions ignore their irrational, foggy core, clinging to stories they can control — tales of fixed places, linear progression, and rigid protocols. This colonial nonsense of a past still haunts our present.</p>
-    <p>How*Is it possible not to reject but to acknowledge and take care of this foggy, imaginative, dreamy core, that </p>
+    <p>How*Is it possible not to reject but to acknowledge and take care of this foggy, imaginative, dreamy core, that</p>
     <p id="quote">«is composed of a multitude of fragments, rather than of smooth epistemological wholes. Some fragments will be collected here and bound temporarily together to form a loosely integrated net – or, better, an unassimilated hybrid, a monstrous body».</p>
     <p>This monstrous misty core body consists of unanswered questions, late-night conversations, disagreements, unfinished stories, the killed darlings, theory and headaches, warm hugs, WhatsApp-messages, cold after-work-beeeeeers, schedules and imaginary budgets that might at some point trespass the borders of fictionality and manifest in real <span id="yellow">$$$</span>.</p>
     <p>Through sitting with the im*possibility of acknowledging and taking care of the misty unconditional core that immediately slips your grip as you try to grasp it, we learned that</p>
