--- a/dramaj_websiteportfolio/about_david.html
+++ b/dramaj_websiteportfolio/about_david.html
@@ -11,7 +11,7 @@
             background-color: rgb(197, 206, 173);
         }
 
-        h2, .h2-container a {
+        h2, .h2-container a, li {
             font-family: Arial, Helvetica, sans-serif;
             color: rgb(3, 0, 109);
             margin: 0;
@@ -21,22 +21,20 @@
         .h2-container {
             display: flex;
             justify-content: space-between;
-            margin-left: 400px;
-            margin-right: 400px;
+            margin: 0 400px;
         }
 
-        .content-container , .work-container{
+        .content-container, .work-container {
             display: flex;
+            flex-direction: column;
             align-items: flex-start;
-            margin-left: 400px;
-            margin-right: 400px;
+            margin: 0 400px;
         }
 
         .content-container img {
             max-width: 200px; /* Adjust the size as needed */
             height: auto; /* Maintain aspect ratio */
-            margin-left: 30px;
-            margin-top: 30px;
+            margin: 30px 0 0 30px;
         }
 
         p {
@@ -44,6 +42,7 @@
             font-size: 1.5em;
             color: rgb(3, 0, 109);
             text-align: justify; /* Justify text */
+            margin: 20px 0; /* Added margin for spacing between paragraphs */
         }
 
         #yellow {
@@ -57,14 +56,14 @@
             font-size: 1.5em;
             color: rgb(204, 255, 0);
             text-align: end;
+            margin: 20px 0; /* Added margin for spacing between paragraphs */
         }
 
         .flex-container {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-left: 400px;
-            margin-right: 400px;
+            margin: 0 400px;
         }
 
         .flex-container p {
@@ -78,16 +77,82 @@
         .buttons {
             display: flex;
             justify-content: center;
-            margin-bottom: 20px;
-            margin-top: 30px;
+            margin: 30px 0 20px 0;
         }
 
         .buttons button {
             margin: 0 10px;
         }
 
+        .buttons a {
+            text-decoration: none;
+            color: inherit;
+        }
+
         #siteyouareon {
-            color:rgb(204, 255, 0)
+            color: rgb(204, 255, 0);
+        }
+
+        li a {
+            text-decoration: none;
+        }
+
+        @media (max-width: 768px) {
+            .h2-container, .content-container, .work-container, .flex-container {
+                margin: 0 20px;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+
+            .content-container img {
+                margin-left: 0;
+                margin-top: 20px;
+            }
+
+            p {
+                font-size: 1.2em;
+            }
+
+            .buttons {
+                flex-direction: row;
+                flex-wrap: wrap;
+            }
+
+            .buttons button {
+                margin: 10px;
+            }
+
+            ul {
+                list-style-position: inside;
+                padding-left: 0;
+                text-align: left;
+            }
+        }
+
+        @media (max-width: 480px) {
+            p {
+                font-size: 1em;
+            }
+
+            .content-container img {
+                max-width: 150px;
+            }
+
+            .buttons {
+                flex-direction: row;
+                flex-wrap: wrap;
+            }
+
+            .buttons button {
+                margin: 10px;
+            }
+
+            ul {
+                list-style-position: inside;
+                padding-left: 0;
+                text-align: left;
+            }
         }
     </style>
 </head>
@@ -105,7 +170,7 @@
     </div>
 
     <div class="h2-container">
-        <a href="about.html"><h2>About</h2></a>
+        <a href="about.html"><h2>dramaj</h2></a>
         <h2 id="siteyouareon">David</h2>
         <a href="about_joelle.html"><h2>Joëlle</h2></a>
     </div>
@@ -114,16 +179,15 @@
         <div>
             <p>David Gees <span id="yellow">(they/he)</span> is a director*writer*researcher and performer*artist working at the intersection of theater, performance and theory. After working as an intern at Schauspielhaus Zürich during the 2020/21 season, they moved to Vienna to study Cross-Disciplinary Strategies at the University of Applied Arts Vienna. Meanwhile they started to work as a director's assistant at Theater Nestroyhof Hamakom and Schauspielhaus Wien.</p>
             <p>In the course of their studies a collaboration with Joëlle Antonie Gbeassor emerged, with whom he produced and co-directed «Daddy's favourite: Monsta Energy: a fairytale» (2023) and «Frankenstein Lost» (2023/24). In 2024, they founded the theatre*performance*production collective <span id="yellow">dramaj</span> together.</p>
+            <p>Their previous work includes:</p>
+            <ul>
+                <li>«Frankenstein Lost»</li>
+                <li>«Daddy's favourite: Monsta Energy: a fairytale»</li>
+                <li><a href="https://www.schauspielhaus.ch/de/kalender/20858/nichts-oder-null">«Nichts oder Null»</a></li>
+            </ul>
         </div>
-        <img src="David Johannes Gees.jpeg" alt="David's Picture">
-
     </div>
 
-    <div class="work-container">
-
-    </div>
-
-    
-
+    <div class="work-container"></div>
 </body>
 </html>
