--- a/dramaj_websiteportfolio/menu.html
+++ b/dramaj_websiteportfolio/menu.html
@@ -6,6 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dramaj</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @media (max-width: 768px) {
+            .buttons {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .buttons button {
+                margin: 10px 0;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .buttons {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .buttons button {
+                margin: 10px 0;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="background"></div>
